# Logically-Disaggregated-Caches

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
config/: cloudlab_machines.xml  config.json  ops_config.json
setup/: .gitignore  analysis.py  analysis_graph2.py  check_freq.py  cleanup.sh  compare_systems.py  compile.sh  create_cluster_users.sh  create_ycsb_workload.sh  env.sh  eval_init.sh  fix_mydata_permissions.sh  init.sh  init_compile.sh  init_setup.sh  kill_ldc.sh  klatency.py  klatency_all.py  metrics_summary_throughput_sorted.csv  parse_snapshot.py  plot_cdf_access_rate.py  process_run_log.py  remove_cluster_users.sh  requirements.txt  run.sh  run_LDC.sh  run_all.sh  run_backup.sh  run_baseline.sh  setup.py  similarity.py
src/: CMakeLists.txt  access_rate_calculations.cpp  access_rate_calculations.h  async_rdma.cpp  async_rdma.h  cal_latency.py  connection.cpp  connection.h  dataset.cpp  defines.h  globals.h  heap.h  ldc.cpp  ldc.h  operations.cpp  operations.h  ops_config.json  packet.capnp  packet.capnp.c++  packet.capnp.h  rdma_reads.cpp  rdma_server.cpp  test_cdf.cpp  testing_optimization.cpp
workload/: Makefile  Makefile_backup  bench_generator.cpp  benchmark  config.mk  dataset.cpp  dataset.txt  main  main.cpp  operations.cpp  operations.h  operations.txt  ops  sendIO.cpp
